codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_copilot_without_runtime_url_or_chatgpt_account.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

 >_ OpenAI Codex v0.0.0

 Model:            gpt-5.6-sol (reasoning none, summaries auto)
 Model provider:   GitHub Copilot
 Directory:        C:\workspace\tests
 Permissions:      Custom (workspace with network access, Ask for approval)
 Agents.md:        <none>

 Token usage:      0 total  (0 input + 0 output)
 Limits:           data not available yet
