codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_workspace_hard_stop.snap
---
source: tui/src/status/tests.rs
expression: rendered
---
/status

 >_ OpenAI Codex v0.0.0

 Model:         gpt-5.1-codex (reasoning none, summaries auto)
 Directory:     [[workspace]]
 Permissions:   Custom (workspace with network access, Ask for approval)
 Agents.md:     <none>

 Token usage:   0 total  (0 input + 0 output)
 Access:        Blocked - workspace usage limit reached
                Ask a workspace owner to increase the limit.
 5h limit:      [█░░░░░░░░░░░░░░░░░░░] 5% left (resets 09:25)

 Live usage:  https://chatgpt.com/codex/settings/usage
