codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_treats_refreshing_empty_limits_as_unavailable.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

 >_ OpenAI Codex v0.0.0

 Model:            gpt-5.1-codex-max (reasoning none, summaries auto)
 Directory:        [[workspace]]
 Permissions:      Custom (workspace with network access, Ask for approval)
 Agents.md:        <none>

 Token usage:      750 total  (500 input + 250 output)
 Context window:   100% left (750 used / 272K)
 Limits:           not available for this account

 Live usage:  https://chatgpt.com/codex/settings/usage
