codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_halfwidth_kana_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

 >_ OpenAI Codex v0.0.0

 Model:            ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ-model…
 Directory:        C:\workspace\tests
 Permissions:      Custom (workspace with…
 Agents.md:        <none>
 Account:          ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ@example.c…
 Thread name:      ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ thread
 Collaborati…:     ｶﾞﾊﾟ collaboration mode

 Limits:           data not available yet

 Live usage:
 https://chatgpt.com/codex/settings/usage
