codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_wraps_enterprise_monthly_credit_details_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

 >_ OpenAI Codex v0.0.0

 Model:             gpt-5.1-codex-max (reason…
 Directory:         [[workspace]]
 Permissions:       Custom (workspace with ne…
 Agents.md:         <none>

 Token usage:       1.2K total  (800 input + …
 Context window:    100% left (1.2K used / 27…
 Monthly credits:   68% left
                    (resets 07:08 on 7 May)
                    8,000 of 25,000 credits
                    used

 Live usage:
 https://chatgpt.com/codex/settings/usage
